--- a/Snake.cbp
+++ b/Snake.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="winmm" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Snake" prefix_auto="1" extension_auto="1" />
